@@ -1,3 +1,4 @@
 - Added mod settings (which can be accessed by pressing the gear icon in 'Manage Mods') for enabling/disabling
   generating specific structures
 - Minor performance optimizations
+- Moved main house into the ground by a little bit, to prevent guide spawning in the ground
